--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,31 @@
     <title>1498 Test</title>
 </head>
 <body>
+    <p id="sattime" style="color: red; font-size: 30px;"></p>
+    <script>
+        var SAT = new Date(2021, 01, 22);
+        var now = Date.now();
+        var days_left = Math.round((SAT.getTime() - now) / (1000 * 60 * 60 * 24) - 31).toString();
+        document.getElementById('sattime').innerHTML = "學測倒數: ".concat(days_left);
+    </script>
+    <div>
+        credited by <a href="https://github.com/SiriusKoan" style="color: blue; text-decoration: none;">SiriusKoan</a>
+        <br>
+        <a href="https://github.com/SiriusKoan/HSNU1498tests" style="color: blue; text-decoration: none;">Source code</a>
+        <hr>
+    </div>
+    <a href="/admin">admin</a>
     <form action="/" method="POST">
-        <span>Jump to Month: </span>
+        <span>Jump to: </span>
         <input type="month" name="time" required>
         <input type="submit" value="Submit">
     </form>
     {{ test_table | safe }}
-    {{ colors | safe }}
+    
+    <div>
+    {% for subject in colors %}
+        <div style="color: {{ colors[subject] }};"><b>{{ subject }}: </b>{{ colors[subject] }}</div>
+    {% endfor %}
+    </div>
 </body>
 </html>
