fix calendar error

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
         document.getElementById('sattime').innerHTML = "學測倒數: ".concat(days_left);
     </script>
     <div>
-        credited by <a href="https://github.com/SiriusKoan" style="color: blue; text-decoration: none;">SiriusKoan</a>
+        credited by <a href="https://github.com/SiriusKoan" target="_blank" style="color: blue; text-decoration: none;">SiriusKoan</a>
         <br>
-        <a href="https://github.com/SiriusKoan/HSNU1498tests" style="color: blue; text-decoration: none;">Source code</a>
+        <a href="https://github.com/SiriusKoan/HSNU1498tests" target="_blank" style="color: blue; text-decoration: none;">Source code</a>
         <hr>
     </div>
     <a href="/admin">admin</a>
